Add LinkedIn link on resume page

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -38,6 +38,11 @@ import Layout from "@layouts/Layout.astro";
             experience with AWS DevOps and GitLab CI/CD, enhancing my skills in
             delivering efficient and streamlined development processes.
           </p>
+          <p>
+            See my full profile on <a
+              href="https://www.linkedin.com/in/jeroenvanwissen/">LinkedIn</a
+            >
+          </p>
         </div>
         <div class="mb-2">
           <span class="langpill">Dutch</span>
@@ -395,6 +400,10 @@ import Layout from "@layouts/Layout.astro";
 
     .langpill {
       @apply inline-block text-tertiary-200 bg-tertiary-400/25 text-xs rounded-full px-3 py-1 mr-1 whitespace-nowrap;
+    }
+
+    a {
+      @apply text-quaternary-400 underline;
     }
   </style>
 </Layout>
