More styling updates

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ import "@style/main.css";
             <a href="/" class="inline-block" aria-label=";// Logo"><Logo /></a>
             <a
               href="/"
-              class="inline-block px-2 text-quaternary-50 text-xl lg:text-2xl xl:text-4xl font-extrabold italic"
+              class="inline-block px-2 text-quaternary-50 text-xl lg:text-3xl xl:text-logo-lg font-extrabold italic"
               aria-label="Jeroen van Wissen">jeroenvanwissen</a
             >
           </div>
