--- a/src/components/PostBlock.astro
+++ b/src/components/PostBlock.astro
@@ -2,22 +2,22 @@
 import { Image } from 'astro:assets';
 
 export interface Props {
-    post: {
-        slug: string;
-        data: {
-            categories: string[];
-            date: Date;
-            title: string;
-            description: string;
-            image: {
-                url: string;
-                alt: string;
-            };
-        };
+  post: {
+    slug: string;
+    data: {
+      categories: string[];
+      date: Date;
+      title: string;
+      description: string;
+      image: {
+        url: string;
+        alt: string;
+      };
     };
-    color?: string;
-    direction?: string;
-    type?: string;
+  };
+  color?: string;
+  direction?: string;
+  type?: string;
 }
 
 const { post, color = 'primary', direction, type = 'post' } = Astro.props;
@@ -25,25 +25,49 @@ const { post, color = 'primary', direction, type = 'post' } = Astro.props;
 let border = `border border-${color}-600`;
 
 if (direction === 'left') {
-    border = `cutoff-tl-br`; //` border border-r-${color}-400 border-t-${color}-400 border-b-${color}-800 border-l-${color}-800`;
+  border = `cutoff-tl-br`; //` border border-r-${color}-400 border-t-${color}-400 border-b-${color}-800 border-l-${color}-800`;
 } else if (direction === 'right') {
-    border = `cutoff-bl-tr`; //` border border-l-${color}-400 border-t-${color}-400 border-b-${color}-800 border-r-${color}-800`;
+  border = `cutoff-bl-tr`; //` border border-l-${color}-400 border-t-${color}-400 border-b-${color}-800 border-r-${color}-800`;
 }
 ---
 
-<a href={`/post/${post.slug}`} class={`text-white/80 hover:text-white bg-white/5 hover:bg-white/10 shadow-md ${border}`}>
-    {post.data.image && <Image src={post.data.image.url} alt={post.data.image.alt} format="webp" quality={50} class="" loading="lazy" />}
-    <div class="p-2 sm:p-4">
-        <h2 class="font-black text-sm sm:text-md lg:text-xl mb-2">
-            {post.data.title}
-        </h2>
-        <p class={`font-extralight text-xs sm:text-sm lg:text-md`}>
-            {post.data.description}
-        </p>
-        <div class="my-1">
-            {post.data.categories.map((category: string) => <span class={`pill inline-block text-${color}-100 bg-${color}-400 bg-opacity-[.16]`}>{category}</span>)}
-        </div>
-        <!-- {
+<a
+  href={`/post/${post.slug}`}
+  class={`text-white/80 hover:text-white bg-white/5 hover:bg-white/10 shadow-md ${border}`}
+>
+  {
+    post.data.image && (
+      <Image
+        src={post.data.image.url}
+        alt={post.data.image.alt}
+        format="webp"
+        width={800}
+        height={400}
+        quality={50}
+        class=""
+        loading="lazy"
+      />
+    )
+  }
+  <div class="p-2 sm:p-4">
+    <h2 class="font-black text-sm sm:text-md lg:text-xl mb-2">
+      {post.data.title}
+    </h2>
+    <p class={`font-extralight text-xs sm:text-sm lg:text-md`}>
+      {post.data.description}
+    </p>
+    <div class="my-1">
+      {
+        post.data.categories.map((category: string) => (
+          <span
+            class={`pill inline-block text-${color}-100 bg-${color}-400 bg-opacity-[.16]`}
+          >
+            {category}
+          </span>
+        ))
+      }
+    </div>
+    <!-- {
             type !== 'project' && (
                 <div class={`text-sm text-white/25`}>
                     {post.data.date.toLocaleString('en-US', {
@@ -55,17 +79,17 @@ if (direction === 'left') {
                 </div>
             )
         } -->
-    </div>
+  </div>
 </a>
 
 <style>
-    p {
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-    }
-    .pill {
-        @apply text-xs rounded-full px-3 py-1 mr-1 whitespace-nowrap;
-    }
+  p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+  .pill {
+    @apply text-xs rounded-full px-3 py-1 mr-1 whitespace-nowrap;
+  }
 </style>
