Some updates.. like masonry grid.

--- a/src/components/PostBlock.astro
+++ b/src/components/PostBlock.astro
@@ -33,7 +33,7 @@ if (direction === 'left') {
 
 <a
   href={`/post/${post.slug}`}
-  class={`text-white/80 hover:text-white bg-white/5 hover:bg-white/10 shadow-md ${border}`}
+  class={`block text-white/80 hover:text-white bg-white/5 hover:bg-white/10 shadow-md ${border}`}
 >
   {
     post.data.image && (
