--- a/src/components/NavItem.astro
+++ b/src/components/NavItem.astro
@@ -50,13 +50,15 @@ if (currentPath === href) {
       <defs>
         <linearGradient
           id={id}
-          x1="12.5854"
-          y1="0.208984"
-          x2="3.64701"
-          y2="20.5175"
+          x1="10"
+          y1="0.5"
+          x2="3.5"
+          y2="20"
           gradientUnits="userSpaceOnUse"
         >
-          <stop offset="0.185" stop-color="var(--color-stop)" stop-opacity="0"
+          <stop offset="0" stop-color="var(--color-stop)" stop-opacity="0"
+          ></stop>
+          <stop offset="0.25" stop-color="var(--color-stop)" stop-opacity="0.7"
           ></stop>
           <stop offset="1" stop-color="var(--color-stop)"></stop>
         </linearGradient>
@@ -95,6 +97,7 @@ if (currentPath === href) {
       }
       linearGradient stop {
         stop-color: #ff2bb9;
+        --color-stop: #ff2bb9;
       }
     }
 
